data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3399.wast
;; 8. **Test Description**: Design a complex loop where a function call alters an array's elements and another `br_if` checks whether a specific element meets a terminating condition. The condition should cause the loop to break.    - **Constraint**: Handling array mutations within function calls correctly and `br_if` condition verification.    - **Infinite Loop Relation**: Erroneous array element handling might mislead the condition resulting in an infinite loop.

(assert_invalid
  (module
    (func $mutate (export "mutate") (param i32) (result i32)
      (local.get 0)
      ;; Imagine this alters an array element
    )
    (memory 1)
    (data (i32.const 0) "\01\02\03\04")
    (func $loop
      (loop $loop
        (call $mutate (i32.const 0))
        (br_if $loop (i32.eq (i32.load offset=0 (i32.const 0)) (i32.const 4)))
      )
    )
  )
  "infinite loop due to improper condition handling"
)